# stock-manager

./: .gitignore  main.py  pyproject.toml  requirements.txt
stock_manager/: models.py
stock_manager/domain/: product.py  stock.py
stock_manager/models/: product.py  stock.py
stock_manager/repositories/: product.py  stock.py
stock_manager/widgets/: helpers.py  main_window.py  models.py  product_window.py  stock_window.py  tables_models.py
tests/: conftest.py  test_main_window.py  test_product_window.py  test_stock_window.py
