[tool.poetry]
name = "stock-manager"
version = "0.1.0"
description = ""
authors = ["riguima <richard.alexsander.guima@gmail.com>"]
readme = "README.md"
packages = [{include = "stock_manager"}]

[tool.poetry.dependencies]
python = "^3.9,<3.12"
pyside6 = "^6.5.1.1"
sqlalchemy = "^2.0.16"
python-dotenv = "^1.0.0"
pydantic = "^1.10.9"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.2"
pytest-cov = "^4.1.0"
blue = "^0.9.1"
isort = "^5.12.0"
python-lsp-server = "^1.7.3"
pytest-qt = "^4.2.0"
taskipy = "^1.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "."

[tool.isort]
profile = "black"
line_length = 79

[tool.taskipy.tasks]
lint = "blue --check --diff . && isort --check --diff ."
test = "pytest -s -x --cov=stock_manager --cov-report=html:coverage -vv"
